# ugnos

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  Ugnos_Concurrent_Time-Series_Database_Core_Whitepaper.md  docker-compose.yml  ugnosd.toml.example
.github/workflows/: ci.yml
benches/: benchmarks.rs  datasets.rs  microbench_iai.rs
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  service.yaml
deploy/systemd/: ugnosd.service
examples/: encoding_compression_demo.rs  persistence_demo.rs
scripts/: verify-docker.sh  verify-k8s-deploy.sh  verify-k8s-local.sh  verify-k8s-manifests.sh
src/: buffer.rs  cardinality_store.rs  core.rs  encoding.rs  error.rs  index.rs  lib.rs  persistence.rs  query.rs  segments.rs  storage.rs  telemetry.rs  types.rs
tests/: cardinality_metrics_tests.rs  daemon_config_tests.rs  daemon_health_tests.rs  encoding_compression_tests.rs  indexing_cardinality_tests.rs  integration_tests.rs  metrics_scaffolding_tests.rs  microbench_regressions.rs  recovery_crash_tests.rs  segment_postings_index_tests.rs  segments_engine_tests.rs  tag_index_corruption_tests.rs  test_manifest.rs
