[package]
name = "ugnos"
version = "0.1.0"
edition = "2021"
description = "A high-performance time-series database core"
license = "MIT OR Apache-2.0"
authors = ["Dan Vi <bogwi@rakumail.jp>"]
repository = "https://github.com/bogwi/ugnos"
homepage = "https://github.com/bogwi/ugnos"
documentation = "https://docs.rs/ugnos"

exclude = ["dev", "data", "demo_data"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tempfile = "3.19.1"
# Add other dependencies as needed, e.g.:
# log = "0.4"
# chrono = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks" # Corresponds to benches/benchmarks.rs
harness = false    # Required for criterion benchmarks

[[example]]
name = "persistence_demo"
path = "examples/persistence_demo.rs"

