[package]
name = "ugnos"
version = "0.4.1"
edition = "2021"
description = "A high-performance, concurrent time-series database core written in Rust, designed for efficient IoT data ingestion, real-time analytics, and monitoring."
license = "MIT OR Apache-2.0"
authors = ["Dan Vi <bogwi@rakumail.jp>"]
repository = "https://github.com/bogwi/ugnos"
homepage = "https://github.com/bogwi/ugnos"
documentation = "https://docs.rs/ugnos"
readme = "README.md"
keywords = ["time-series", "database", "concurrent", "performance", "analytics"]
categories = ["database-implementations", "concurrency", "data-structures"]

exclude = ["dev", "data", "demo_data"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tempfile = "3.19.1"
crc32fast = "1.4"
metrics = "0.24.3"
metrics-exporter-prometheus = { version = "0.18.1", default-features = false, optional = true }
lz4_flex = "0.12.0"
zstd = "0.13.3"
roaring = "0.11.3"
# Add other dependencies as needed, e.g.:
# log = "0.4"
# chrono = "0.4"

[features]
# Enable Prometheus in-process scraping by default, while allowing consumers to opt out
# via `default-features = false` if they only want the `metrics` facade instrumentation.
default = ["prometheus"]
prometheus = ["dep:metrics-exporter-prometheus"]

[dev-dependencies]
criterion = "0.5"
proptest = "1.6"
iai-callgrind = "0.16.1"
rand = "0.9.2"
rand_chacha = "0.9.0"

[[bench]]
name = "benchmarks" # Corresponds to benches/benchmarks.rs
harness = false    # Required for criterion benchmarks

[[bench]]
name = "microbench_iai" # Corresponds to benches/microbench_iai.rs
harness = false         # Required for iai-callgrind benchmarks

[[example]]
name = "persistence_demo"
path = "examples/persistence_demo.rs"

[[example]]
name = "encoding_compression_demo"
path = "examples/encoding_compression_demo.rs"

